8.8 - alignment issues

--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -10,5 +10,5 @@ body {
 .container {
     max-width: 1000px;
     margin: 30px auto 30px auto;
-    text-align: center;
+    text-align: left;
 }
