--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -38,6 +38,7 @@
     flex-direction: column;
     align-items: left;
     position: relative;
+    padding-left: 30px;
 }
 
 .filters .locations {
