--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -46,7 +46,7 @@ article h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 5%;
+    top: 4%;
     right: 7%;
 }
 
